# play_motions

./: .gitignore  config.py  main.py  motion_idea.md  pyproject.toml  pytest_output.txt  requirement.md
modules/: effect_player.py  pose_detector.py  voice_listener.py
tests/: test_main.py
